[feat] health endpoint
